
SUBDIRS = test.allgather \
		  test.allgatherv \
		  test.allreduce \
		  test.alltoall \
		  test.alltoallv \
		  test.bcast \
		  test.fhello \
		  test.forever \
		  test.fork \
		  test.fring \
		  test.gather \
		  test.gatherv \
		  test.hello \
		  test.jacobi \
		  test.keyhist \
		  test.omp \
		  test.pcontrol \
		  test.posixio-helloworld \
		  test.posixio-read \
		  test.simple_mpi \
		  test.status_ignore


dnl	  test.pomp-standalone  (sahu: disabled for now)

